stderr
JudgeMan.java:67: error: reached end of file while parsing
}
 ^
1 error
